UX: fix overflowing quote bar (#27938)

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -584,6 +584,17 @@ aside.quote {
 
   .buttons {
     display: flex;
+    flex-wrap: wrap;
+    @media screen and (max-width: 420px) {
+      flex-direction: column;
+      align-items: flex-start;
+
+      .btn,
+      .ai-post-helper {
+        width: 100%;
+        justify-content: flex-start;
+      }
+    }
   }
 
   .extra {
